# babynames

./: .buildinfo  .dockerignore  .env  .gitignore  .pre-commit-config.yaml  .rhiza.env  Dockerfile  Makefile  README.md  REPOSITORY_ANALYSIS.md  analysis.md  bash.sh  build.sh  config.json  config.py  docker-compose.yml  environment.yml  genindex.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  run.sh  run2.sh  search.html  searchindex.js  start.sh
.github/: renovate.json  template.yml
.github/actions/configure-git-auth/: action.yml
.github/actions/core/: action.yml
.github/rhiza/: template.yml
.github/workflows/: binder.yml  book.yml  book2.yml  ci.yml  core.yml  deptry.yml  hadolint.yml  main.yml  maintain.yml  marimo.yml  noreq.yml  pre-commit.yml  release.yml  rhiza_book.yml  rhiza_ci.yml  rhiza_deptry.yml  rhiza_marimo.yml  rhiza_mypy.yml  rhiza_release.yml  rhiza_validate.yml  slides.yml  sync.yml
.rhiza/: .cfg.toml  history  template-bundles.yml  template.yml
.rhiza/make.d/: 01-test.mk  02-book.mk  08-docs.mk  book.mk
.rhiza/requirements/: docs.txt  tests.txt
.rhiza/templates/: template.yml
_sources/docs/: marimo.md
_sources/docs/SMI/: Fun.ipynb
binder/: Dockerfile  README.txt  environment.yml
book/: _config.yml  _toc.yml  book.mk  genindex.html  search.html  searchindex.js
book/_sources/docs/: marimo.md
book/docs/: index.html  marimo.html
book/docs/SMI/: Fun.py
book/docs/SWISS Names/: Boring names.ipynb  Geometry of Names.ipynb  Old names.ipynb  boring.py  geometry.py  old.py
book/docs/US Names/: Elvis.ipynb
book/marimo/: boring.py  elvis.py  geometry.py  old.py
book/marimo/notebooks/: boring.py  old.py
book/marimo/public/: girls.csv
books/: Baby.ipynb
books/SMI/: Fun with the SMI.ipynb
books/SWISS Names/: Boring names.ipynb  Old names.ipynb  boys.csv  girls.csv
books/US Names/: The Elvis effect.ipynb
data/ch/: chFemale.csv  chMale.csv  source.txt
data/ch/original/: frauen.xlsx
data/smi/: smi.txt  smi2017_adjclose.txt
data/switzerland/: maenner.xlsx
docs/: index.html  marimo.html  mkdocs-base.yml
docs/SMI/: Fun.html
docs/US Names/: Elvis.html
docs/development/: MARIMO.md
marimo/: boring.html  elvis.html  fun.html  geometry.html  old.html
notebooks/: boring.html  boring.py  elvis.html  elvis.py  fun.py  geometry.html  geometry.py  old.html  old.py  pyproject.toml  reader.py  requirements.txt
notebooks/public/: boys.csv
old/: docker-compose.yml  oldDockerfile
scripts/: Prediction.ipynb
scripts/.ipynb_checkpoints/: Prediction-checkpoint.ipynb
scripts/SMI/: prices.csv
scripts/SWISS Names/: Boring names.ipynb  Geometry of Names.ipynb
scripts/SWISS Names/.ipynb_checkpoints/: Boring names-checkpoint.ipynb  Geometry of Names-checkpoint.ipynb  Old names-checkpoint.ipynb
scripts/US Names/: The Elvis effect.ipynb
scripts/US Names/.ipynb_checkpoints/: The Elvis effect-checkpoint.ipynb
tests/: test_trivial.py
work/SMI/: Fun with the SMI.ipynb
work/SWISS Names/: Boring names.ipynb  Geometry of Names.ipynb  Old names.ipynb
work/US Names/: The Elvis effect.ipynb
work/books/: Baby.ipynb
