[project]
name = "babynames"
version = "0.2.0"
description = "An interactive data analysis project exploring baby name trends and popularity over time"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Thomas Schmelzer", email = "thomas.schmelzer@gmail.com" }
]
keywords = ["baby names", "data analysis", "visualization", "statistics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "marimo>=0.13.15",
    "polars>=1.30.0",
    "numpy>=2.2.0",
    "plotly>=6.1.0",
    "scipy>=1.15.0",
    "pandas",
]

[project.urls]
Homepage = "https://github.com/tschm/babynames"
Documentation = "http://tschm.github.io/babynames"
Repository = "https://github.com/tschm/babynames"

[tool.uv]
dev-dependencies = []
