[project]
name = "babynames-analysis"
version = "0.0.0"
description = "A simple Marimo project for analyzing baby name trends"
authors = ["Thomas Schmelzer <thomas.schmelzer@gmail.com>"]
requires-python = ">=3.12"
dependencies = [
    "marimo",
    "pandas",
    "polars",
    "numpy",
    "plotly",
    "scipy"
]
